--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cors": "^2.8.5",
     "express": "^4.16.3",
     "knex": "^0.15.2",
-    "mysql": "^2.16.0"
+    "mysql": "^2.16.0",
+    "sqlite3": "^4.0.6"
   }
 }
